fix(desktop): make eawt native fullscreen actually engage (issue #94)
Verified against the local macOS JDK 17 that the initial helper would silently
no-op, and corrected two things a runtime probe surfaced:

1. Wrong AppKit method names — FullScreenUtilities uses addFullScreenListenerTo /
   removeFullScreenListenerFrom (NoSuchMethodException on the old names).
2. java.desktop does not export com.apple.eawt to the unnamed (classpath) module,
   so a bare reflective invoke throws IllegalAccessException — swallowed by our
   try/catch, so fullscreen would never engage. Pass
   --add-exports=java.desktop/com.apple.eawt=ALL-UNNAMED, gated to macOS build/run
   hosts (Windows/Linux would only warn and MacWindow no-ops there anyway). Probe
   confirmed invoke succeeds with the flag. Single-token form so jpackage's
   per-entry --java-options mapping keeps it intact in the packaged launcher.